@@ -37,6 +37,7 @@ typedef enum
     MACHINE_MACBOOKPRO_5,
     MACHINE_MACBOOKPRO_6,
     MACHINE_MACBOOKPRO_7,
+    MACHINE_MACBOOKPRO_8,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
